[build-system]
requires = ['setuptools>=65.0']
build-backend = "setuptools.build_meta"

[project]
name = "CorrReg"
version = "0.1.0"
authors = [
  { name="Thomas Brooks" },
]
description = "CorrReg: regression of correlation values"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]