[build-system]
requires = ['setuptools>=65.0']
build-backend = "setuptools.build_meta"

[project]
name = "corr_reg"
version = "0.1.0"
authors = [
  { name="Thomas Brooks" },
]
description = "corr_reg: regression of correlation values"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "jax>=0.4.13",
  "pandas>=2.0.3",
  "patsy>=0.5.6",
  "scipy>=1.10.1",
]